# WaterySQL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: config.h
data_storage/: data.cpp  data.h  data_descriptor.h  type_tag.h
doc/: Architecture.mdj  设计文档.md
filesystem/: file_manager.cpp  file_manager.h  page.cpp  page.h  page_buffer.cpp  page_buffer.h  testfilesystem.cpp
filesystem/bufmanager/: FindReplace.h
filesystem/utils/: MyBitMap.h
filesystem_demo/: testfilesystem.cpp
filesystem_demo/bufmanager/: BufPageManager.h  BufferedPageManager.h  FindReplace.h
filesystem_demo/fileio/: FileManager.h  FileTable.h
filesystem_demo/utils/: MyBitMap.h  MyHashMap.h  compare.h  pagedef.h
jni/: EngineJNI.h  EngineJNI.java
lib/: EngineJNI.cpp  EngineJNI.h  watery_sql.cpp  watery_sql.h
record_management/: field_descriptor.h  record.cpp  record.h  record_descriptor.h  record_manager.cpp  record_manager.h  table.cpp  table.h  table_descriptor.h
res/: watery-sql.syntax
res/dataset/: create.sql  food.sql
res/dataset_small/: create.sql  test_create.sql  test_select.sql
src/: main.cpp
src/action/: actor.h  column_predicate.h  column_predicate_operator.h  commit_actor.h  create_database_actor.h  create_index_actor.h  create_table_actor.h  delete_record_actor.h  describe_table_actor.h  drop_database_actor.h  drop_index_actor.h  drop_table_actor.h  execute_file_actor.h  exit_actor.h  insert_record_actor.h  predicate_operator_helper.h  select_record_actor.h  show_databases_actor.h  show_tables_actor.h  update_record_actor.h  use_database_actor.h
src/command_parsing/: parser.h  scanner.cpp  scanner.h  token.h  token_tag.h
src/config/: config.h
src/data/: aggregate_function.h  aggregate_function_helper.h  data_comparator.h  data_descriptor.h  data_view.h  field_constraint.h  field_descriptor.h  index_key_comparator.h  predicate_operator.h  predicate_operator_helper.h  record_descriptor.h  type_tag.h  type_tag_helper.h
src/data_storage/: char.h  data.cpp  data.h  data_comparator.h  data_descriptor.h  data_view.h  field_constraint.h  field_descriptor.h  field_view.h  float.h  index_key_comparator.h  integer.h  record_descriptor.h  type_tag.h  varchar.h
src/error/: closing_shared_index.h  closing_shared_table.h  conflict_index_entry_insertion.h  conflict_record_field_update.h  cross_table_predicate_type_mismatch.h  data_error.h  deleting_referenced_record.h  empty_index_tree.h  error.h  error_class_generator.py  field_not_found.h  index_entry_not_found.h  index_entry_offset_out_of_range.h  index_entry_oversized.h  index_manager_error.h  invalid_null_field.h  invalid_primary_key_update.h  negative_foreign_key_reference_count.h  negative_record_reference_count.h  page_manager_error.h  parser_error.h  query_engine_error.h  record_manager_error.h  record_not_found.h  record_offset_out_of_range.h  record_oversized.h  record_reference_not_counted.h  record_slot_usage_bitmap_corrupt.h  scanner_error.h  too_many_columns_to_insert.h  unique_search_in_non_unique_index.h  value_decoder_error.h
src/errors/: data_error.h  error.h  file_io_error.h  index_manager_error.h  page_manager_error.h  parser_error.h  record_manager_error.h  scanner_error.h  system_manager_error.h
src/execution/: column_predicate.h  column_predicate_helper.h  column_predicate_operator.h  context.h  create_database_actor.h  create_index_actor.h  create_table_actor.h  delete_record_actor.h  describe_table_actor.h  drop_database_actor.h  drop_index_actor.h  drop_table_actor.h  execution_engine.cpp  execution_engine.h  insert_record_actor.h  select_record_actor.h  show_databases_actor.h  show_tables_actor.h  update_record_actor.h  use_database_actor.h
src/filesystem_demo/fileio/: FileTable.h
src/filesystem_demo/utils/: MyHashMap.h  MyLinkList.h  compare.h
src/index/: index.cpp  index.h  index_entry_offset.h  index_header.h  index_manager.cpp  index_manager.h  index_node.h  index_node_header.h  index_node_link.h
src/index_management/: b_tree.cpp  b_tree.h  b_tree_node.cpp  b_tree_node.h  b_tree_node_offset.cpp  b_tree_node_offset.h  index.h  indexNodeLink.h  index_entry_offset.h  index_header.h  index_manager.cpp  index_manager.h  index_node.h  index_node_header.h  index_node_pointer_offset.h
src/page/: page_handle.h  page_manager.cpp  page_manager.h
src/page_management/: buffer_offset.h  buffered_page.h  page.h  page_handle.h  page_manager.cpp  page_manager.h
src/page_management/filesystem_demo/: BufferedPageManager.h  FileManager.h  FindReplace.h  MyHashMap.h  MyLinkList.h  pagedef.h
src/parsing/: parser.cpp  parser.h  scanner.cpp  scanner.h  token_offset.h  token_tag.h  token_tag_helper.cpp  token_tag_helper.h  watery-sql.syntax
src/query/: Predicate.h  cross_table_predicate.h  predicate.h  predicate_efficiency_estimator.cpp  predicate_efficiency_estimator.h  query_engine.cpp  query_engine.h  query_plan.h  query_predicate.h  selection_context.h  single_table_predicate.h
src/record/: data_page.h  record_manager.cpp  record_manager.h  record_offset.h  table.cpp  table.h  table_header.h
src/record_management/: data_page.h  data_page_header.h  field_descriptor.h  record.cpp  record.h  record_descriptor.h  record_manager.cpp  record_manager.h  record_offset.h  table.cpp  table.h  table_header.h
src/system/: system_manager.cpp  system_manager.h
src/system_management/: system_manager.cpp  system_manager.h
src/utility/: bitset_holder_type_selector.h  noncopyable.h
src/utility/io/: column_predicate_printer.h  error_printer.h  file_reader.h  html_table_printer.cpp  html_table_printer.h  identifier_printing.h  printer.h  reader.h  record_descriptor_printer.h
src/utility/io_helpers/: binary_stream.h  error_printer.h  printer.h  reader.h  string_view_copier.h
src/utility/mathematics/: sgn.h
src/utility/memory/: binary_stream.h  identifier_comparison.h  (+4 more)
test/: command_parsing_test.cpp  index_manager_test.cpp  record_manager_test.cpp
test/dataset/: create_and_insert.sql  orders.sql
test/dataset_small/: create.sql  test_join.sql
utility/: binary_stream.h  noncopyable.h
(+19 files in other folders)
